--- a/index.html
+++ b/index.html
@@ -96,10 +96,10 @@
                           <p class="avatar-goal">Product Designer</p>
                           <div class="media-container">
                             <ul class="media-list-avatar">
-                              <li class="media-list-item"><a href="https://www.instagram.com/" target="_blank" fill="none" class="media-dscr social"></a><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-instagram" ></use></svg></li>
-                              <li class="media-list-item"><a href="https://twitter.com/?lang=ua" target="_blank" fill="none" class="media-dscr social"></a><use class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-twitter1"></svg></li>
-                              <li class="media-list-item"><a href="https://uk-ua.facebook.com/" target="_blank" fill="none" class="media-dscr social"></a><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-facebook" ></use></svg></li>
-                              <li class="media-list-item"><a href="https://ua.linkedin.com/" target="_blank" fill="none" class="media-dscr social"></a><href= class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-linkedin2"></svg></li>
+                              <li class="media-list-item-t"><a href="https://www.instagram.com/" target="_blank" fill="none" class="media-dscr-social"></a><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-instagram" ></use></svg></li>
+                              <li class="media-list-item-t"><a href="https://twitter.com/?lang=ua" target="_blank" fill="none" class="media-dscr-social"></a><use class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-twitter1"></svg></li>
+                              <li class="media-list-item-t"><a href="https://uk-ua.facebook.com/" target="_blank" fill="none" class="media-dscr-social"></a><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-facebook" ></use></svg></li>
+                              <li class="media-list-item-t"><a href="https://ua.linkedin.com/" target="_blank" fill="none" class="media-dscr-social"></a><href= class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-linkedin2"></svg></li>
                            </ul>
                          </div>
                         </div>
@@ -234,28 +234,28 @@
                          Increase the flow of customers and sales for your business with digital marketing & growth solutions.
                      </p>
                     </div>
-                    <div class="footer-media">
+                  <div class="footer-media">
                       <p class="text-media">Social media</p>
                        <ul class="media-list">
                         <li class="media-list-item">
-                          <a href="https://www.instagram.com/" target="_blank" fill="none" class="media-dscr">
-                          <svg class="media-link" width="24" height="24">
-                           <use href="./images/icons.svg#icon-instagram"></use></svg></a>
+                          <a href="https://www.instagram.com/" target="_blank"  class="media-dscr">
+                          <svg class="media-link" width="24" height="24" fill="none">
+                           <use href="./images/icons.svg#icon-instagram"></svg></a> 
                          <li class="media-list-item">
-                          <a href="https://twitter.com/?lang=ua" target="_blank" fill="none" class="media-dscr">
-                          <svg class="media-link" width="24" height="24"
-                          href="./images/icons.svg#icon-twitter1"></svg></a>
+                          <a href="https://twitter.com/?lang=ua" target="_blank" class="media-dscr">
+                          <svg class="media-link" width="24" height="24" fill="none">
+                          <a href="./images/icons.svg#icon-twitter1"></svg></a>
                          </li>
                         <li class="media-list-item">
-                         <a href="https://uk-ua.facebook.com/" target="_blank" fill="none" class="media-dscr">
-                         <svg class="media-link" width="24" height="24">
-                          <use href="./images/icons.svg#icon-facebook2" ></use></svg></a>
+                         <a href="https://uk-ua.facebook.com/" target="_blank"  class="media-dscr">
+                         <svg class="media-link" width="24" height="24" fill="none">
+                          <a href="./images/icons.svg#icon-facebook2"></svg></a>
                         </li>
                         </li>
                         <li class="media-list-item">
-                         <a href="https://ua.linkedin.com/" target="_blank" fill="none" class="media-dscr">
-                          <svg class="media-link" width="24" height="24"
-                          href="./images/icons.svg#icon-linkedin2"></svg></a>
+                         <a href="https://ua.linkedin.com/" target="_blank"  class="media-dscr">
+                          <svg class="media-link" width="24" height="24" fill="none"-t>
+                          <a href="./images/icons.svg#icon-linkedin2"></svg></a>
                         </li>
                        </ul>
                     </div>
