--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                        <ul class="container-list-item">
                           <li class="benefits-list-item">
                            <div class="icon-b">
-                           <svg width="64" height="64"><use href="./images/icon.svg.svg#icon-antenna-1"></use></svg>
+                           <svg width="64" height="64"><use href="./images/icons.svg#icon-antenna"></use></svg>
                            </div>
                             <h3 class="our-goal">Strategy</h3>
                             <p class="our-goal-dscr">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
@@ -58,7 +58,7 @@
 
                           <li class="benefits-list-item">
                             <div class="icon-b">
-                              <svg width="64" height="64"><use href="./images/icons.svg.svg#icon-clock-1"></use></svg>
+                              <svg width="64" height="64"><use href="./images/icons.svg#icon-clock"></use></svg>
                             </div>
                             <h3 class="our-goal">Punctuality</h3>
                             <p class="our-goal-dscr">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
@@ -66,7 +66,7 @@
 
                           <li class="benefits-list-item">
                             <div class="icon-b">
-                              <svg width="64" height="64"><use href="./images/icon.svg.svg#icon-diagram-1"></use></svg>
+                              <svg width="64" height="64"><use href="./images/icons.svg#icon-diagram"></use></svg>
                             </div>
                             <h3 class="our-goal">Diligence</h3>
                             <p class="our-goal-dscr">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
@@ -74,7 +74,7 @@
 
                            <li class="benefits-list-item">
                             <div class="icon-b">
-                              <svg width="64" height="64"><use href="./images/icon.svg.svg#icon-astronaut-1"></use></svg>
+                              <svg width="64" height="64"><use href="./images/icons.svg#icon-astronaut"></use></svg>
                             </div>
                             <h3 class="our-goal">Technologies</h3>
                             <p class="our-goal-dscr">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
@@ -97,9 +97,9 @@
                           <p class="avatar-goal">Product Designer</p>
                           <div class="media-container">
                             <ul class="media-list-avatar">
-                              <li class="media-list-item-t"><a href="https://www.instagram.com/" target="_blank"  class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-instagram-2" ></use></svg></a></li>
-                              <li class="media-list-item-t"><a href="https://twitter.com/?lang=ua" target="_blank"  class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-twitter-1"></use></svg></a></li>
-                              <li class="media-list-item-t"><a href="https://uk-ua.facebook.com/" target="_blank" class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-facebook-1" ></use></svg></a></li>
+                              <li class="media-list-item-t"><a href="https://www.instagram.com/" target="_blank"  class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-instagram" ></use></svg></a></li>
+                              <li class="media-list-item-t"><a href="https://twitter.com/?lang=ua" target="_blank"  class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-twitter1"></use></svg></a></li>
+                              <li class="media-list-item-t"><a href="https://uk-ua.facebook.com/" target="_blank" class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-facebook" ></use></svg></a></li>
                               <li class="media-list-item-t"><a href="https://ua.linkedin.com/" target="_blank"  class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-linkedin2"></use></svg></a></li>
                            </ul>
                          </div>
@@ -112,9 +112,9 @@
                           <p class="avatar-goal">Frontend Developer</p>
                           <div class="media-container">
                             <ul class="media-list-avatar">
-                              <li class="media-list-item-t"><a href="https://www.instagram.com/" target="_blank"  class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-instagram-2" ></use></svg></a></li>
-                              <li class="media-list-item-t"><a href="https://twitter.com/?lang=ua" target="_blank"  class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-twitter-1"></use></svg></a></li>
-                              <li class="media-list-item-t"><a href="https://uk-ua.facebook.com/" target="_blank" class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-facebook-1" ></use></svg></a></li>
+                              <li class="media-list-item-t"><a href="https://www.instagram.com/" target="_blank"  class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-instagram" ></use></svg></a></li>
+                              <li class="media-list-item-t"><a href="https://twitter.com/?lang=ua" target="_blank"  class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-twitter1"></use></svg></a></li>
+                              <li class="media-list-item-t"><a href="https://uk-ua.facebook.com/" target="_blank" class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-facebook" ></use></svg></a></li>
                               <li class="media-list-item-t"><a href="https://ua.linkedin.com/" target="_blank"  class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-linkedin2"></use></svg></a></li>
                            </ul>
                           </div>
@@ -128,9 +128,9 @@
                           <p class="avatar-goal">Marketing</p>
                           <div class="media-container">
                             <ul class="media-list-avatar">
-                              <li class="media-list-item-t"><a href="https://www.instagram.com/" target="_blank"  class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-instagram-2" ></use></svg></a></li>
-                              <li class="media-list-item-t"><a href="https://twitter.com/?lang=ua" target="_blank"  class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-twitter-1"></use></svg></a></li>
-                              <li class="media-list-item-t"><a href="https://uk-ua.facebook.com/" target="_blank" class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-facebook-1" ></use></svg></a></li>
+                              <li class="media-list-item-t"><a href="https://www.instagram.com/" target="_blank"  class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-instagram" ></use></svg></a></li>
+                              <li class="media-list-item-t"><a href="https://twitter.com/?lang=ua" target="_blank"  class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-twitter1"></use></svg></a></li>
+                              <li class="media-list-item-t"><a href="https://uk-ua.facebook.com/" target="_blank" class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-facebook" ></use></svg></a></li>
                               <li class="media-list-item-t"><a href="https://ua.linkedin.com/" target="_blank"  class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-linkedin2"></use></svg></a></li>
                            </ul>
                         </div>
@@ -143,9 +143,9 @@
                         <p class="avatar-goal">UI Designer</p>
                         <div class="media-container">
                           <ul class="media-list-avatar">
-                            <li class="media-list-item-t"><a href="https://www.instagram.com/" target="_blank"  class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-instagram-2" ></use></svg></a></li>
-                            <li class="media-list-item-t"><a href="https://twitter.com/?lang=ua" target="_blank"  class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-twitter-1"></use></svg></a></li>
-                            <li class="media-list-item-t"><a href="https://uk-ua.facebook.com/" target="_blank" class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-facebook-1" ></use></svg></a></li>
+                            <li class="media-list-item-t"><a href="https://www.instagram.com/" target="_blank"  class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-instagram" ></use></svg></a></li>
+                            <li class="media-list-item-t"><a href="https://twitter.com/?lang=ua" target="_blank"  class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-twitter1"></use></svg></a></li>
+                            <li class="media-list-item-t"><a href="https://uk-ua.facebook.com/" target="_blank" class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-facebook" ></use></svg></a></li>
                             <li class="media-list-item-t"><a href="https://ua.linkedin.com/" target="_blank"  class="media-dscr-social"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-linkedin2"></use></svg></a></li>
                          </ul>
                         </div>
@@ -255,25 +255,26 @@
                   <div class="footer-media">
                       <p class="text-media">Social media</p>
                        <ul class="media-list">
-                        <li><a class="media-list-item">
+                        <li class="media-list-item">
                           <a href="https://www.instagram.com/" target="_blank"  class="media-dscr">
                           <svg class="media-link" width="24" height="24">
-                           <use href="./images/icons.svg.svg#icon-instagram-2"></use></svg></a></li>
+                           <use href="./images/icons.svg#icon-instagram"></use></svg></a>
+                          </li>
                         
                          <li class="media-list-item">
                           <a href="https://twitter.com/?lang=ua" target="_blank" class="media-dscr">
                           <svg class="media-link" width="24" height="24">
-                          <use href="./images/icons.svg.svg#icon-twitter-1"></use></svg></a>
+                          <use href="./images/icons.svg#icon-twitter1"></use></svg></a>
                          </li>
                         <li class="media-list-item">
                          <a href="https://uk-ua.facebook.com/" target="_blank"  class="media-dscr">
                          <svg class="media-link" width="24" height="24">
-                          <use href="./images/icons.svg.svg#icon-facebook-1"></use></svg></a>
+                          <use href="./images/icons.svg#icon-facebook"></use></svg></a>
                         </li>
                         <li class="media-list-item">
                          <a href="https://ua.linkedin.com/" target="_blank"  class="media-dscr">
                           <svg class="media-link" width="24" height="24">
-                          <use href="./images/icons.svg.svg#icon-linkedin-1"></use></svg></a>
+                          <use href="./images/icons.svg#icon-linkedin2"></use></svg></a>
                         </li>
                        </ul>
                     </div>
