--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
                             <li class="media-list-item-t"><a href="https://uk-ua.facebook.com/" target="_blank" class="media-dscr-social link"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-facebook" ></use></svg></a></li>
                             <li class="media-list-item-t"><a href="https://ua.linkedin.com/" target="_blank"  class="media-dscr-social link"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-linkedin2"></use></svg></a></li>
                           </ul>
+                            </div>
                        <li class="avatar">
                         <div class="container-avatar">
                           <img src="./images/tom-ford.jpg" alt="tom ford avatar" width="264" height="260">
@@ -113,6 +114,7 @@
                             <li class="media-list-item-t"><a href="https://uk-ua.facebook.com/" target="_blank" class="media-dscr-social link"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-facebook" ></use></svg></a></li>
                             <li class="media-list-item-t"><a href="https://ua.linkedin.com/" target="_blank"  class="media-dscr-social link"><svg class="media-link" width="16" height="16"><use href="./images/icons.svg#icon-linkedin2"></use></svg></a></li>
                          </ul>
+                        </div>
                         </li>
                         <li class="avatar">
                         <div class="container-avatar">
