--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
 
                             <!--=====footer======-->
                   <footer class="section">
-                    <div class="container footer-section">
+                    <div class="container">
                       <div class="footer-p">
                         <a class="logo-f" href="./index.html">Web<span class="logo-part-f">Studio</span></a>
                         <p class="section-text">
