--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
                        
                          <ul class="avatar-list">
                           <li class="avatar">
+                            <img src="./images/mark-guerrero.jpg" alt="mark-guerrero avatar" width="264" height="260">
                             <div class="container-avatar">
-                          <img src="./images/mark-guerrero.jpg" alt="mark-guerrero avatar" width="264" height="260">
                           <h3 class="avatar-name">Mark Guerrero</h3>
                           <p class="avatar-goal">Product Designer</p>
                           <ul class="media-list-avatar">
@@ -104,8 +104,8 @@
                           </ul>
                             </div>
                        <li class="avatar">
+                        <img src="./images/tom-ford.jpg" alt="tom ford avatar" width="264" height="260">
                         <div class="container-avatar">
-                          <img src="./images/tom-ford.jpg" alt="tom ford avatar" width="264" height="260">
                           <h3 class="avatar-name">Tom Ford</h3>
                           <p class="avatar-goal">Frontend Developer</p>
                           <ul class="media-list-avatar">
@@ -117,8 +117,8 @@
                         </div>
                         </li>
                         <li class="avatar">
-                        <div class="container-avatar">
                           <img src="./images/camila-garcia.jpg" alt="camila garcia avatar" width="264" height="260">
+                        <div class="container-avatar">
                           <h3 class="avatar-name">Camila Garcia</h3>
                           <p class="avatar-goal">Marketing</p>
                           <ul class="media-list-avatar">
@@ -129,8 +129,8 @@
                          </ul> 
                           </div>
                         <li class="avatar"> 
-                        <div class="container-avatar">
                           <img src="./images/daniel-wilson.jpg" alt="daniel wilson avatar" width="264" height="260">
+                        <div class="container-avatar">
                           <h3 class="avatar-name">Daniel Wilson</h3>
                         <p class="avatar-goal">UI Designer</p>
                         <ul class="media-list-avatar">
@@ -236,7 +236,7 @@
 
                             <!--=====footer======-->
                   <footer class="section">
-                    <div class="container">
+                    <div class="container media-f">
                       <div class="footer-p">
                         <a class="logo-f" href="./index.html">Web<span class="logo-part-f">Studio</span></a>
                         <p class="section-text">
